--- a/style.css
+++ b/style.css
@@ -77,5 +77,22 @@ color: aliceblue;
 }
 
 .content-secondary {
+    display: table-cell;
+    flex-direction: column;
+    gap: 24px;
+    float: right;
+    width: 500px;
+    font-family: 'Ropa Sans', sans-serif;
+    color: darkslategray;
+    font-size: 21px;
+    width: 50%;
+    margin-top: 2%;
     
 }
+
+.header-menu-item {
+    font-size: 26px;
+    font-family: 'Ropa Sans', sans-serif;
+
+}
+
